manifests/registry/resources/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: registry
  labels:
    app.kubernetes.io/name: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: registry
  template:
    metadata:
      labels:
        app.kubernetes.io/name: registry
    spec:
      containers:
        - name: registry
          image: registry:2
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: registry-data
              mountPath: /var/lib/registry
            - name: registry-auth
              mountPath: /auth
              readOnly: true
      volumes:
        - name: registry-data
          hostPath:
            path: /opt/registry-data
            type: DirectoryOrCreate
        - name: registry-auth
          secret:
            secretName: registry-auth
            items:
              - key: htpasswd
                path: htpasswd
