manifests/registry/resources/dev/registry-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: registry-route
  namespace: registry
  annotations:
    external-dns.alpha.kubernetes.io/target: "116.203.203.121"
spec:
  parentRefs:
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: http
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - registry-dev.easysolution.work
  rules:
    - backendRefs:
        - name: registry
          port: 5000
